stretched link fixed - mb navbar actualised

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -1,7 +1,6 @@
 .card-trip {
   overflow: hidden;
-  background: white;
-  box-shadow: 0 0 15px rgba(0,0,0,0.2);
+  box-shadow: 10px 0 15px rgba(0,0,0,0.5);
   margin: 50px 0;
   min-width: 270px;
 }
@@ -22,6 +21,11 @@
   font-size: 12px;
   opacity: .7;
   margin: 0;
+}
+
+.stretched-link::after {
+  margin: 50px 15px 50px 15px !important;
+  // padding: 0 -24px 0 -24px !important;
 }
 
 
